[package]
name = "clmm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clmm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.0"

uint = "0.10"
bytemuck = { version = "1.22.0", features = ["derive", "min_const_generics"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
