[package]
name = "clmm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clmm"
doctest = false

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []

[dependencies]
anchor-lang = {version = "0.31.0", features = ["init-if-needed", "anchor-debug"]}
anchor-spl = { version = "0.31.1", features = ["metadata"] }
solana-program = "2.2.1"
spl-memo = "6.0.0"

uint = "0.10"
bytemuck = { version = "1.22.0", features = ["derive", "min_const_generics"] }

[dev-dependencies]
quickcheck = "0.9"
proptest = "1.0"
rand = "0.8.5"
